<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/purple_500"
        app:contentInsetLeft="@dimen/_0sdp"
        app:contentInsetRight="@dimen/_0sdp"
        app:contentInsetEnd="@dimen/_0sdp"
        app:contentInsetStart="@dimen/_0sdp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/high_scores"
            android:textAllCaps="true"
            android:paddingTop="@dimen/_0sdp"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/_18ssp"
            />
    </androidx.appcompat.widget.Toolbar>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtRank"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintEnd_toStartOf="@id/txtPlayerName"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintHorizontal_weight="0.2"
        android:text="@string/rank"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtScore"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toEndOf="@id/txtPlayerName"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintHorizontal_weight="0.2"
        android:text="@string/score"
        android:gravity="center"
        android:paddingEnd="@dimen/_10sdp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPlayerName"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toEndOf="@id/txtRank"
        app:layout_constraintEnd_toStartOf="@id/txtScore"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="@color/black"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintHorizontal_weight="0.6"
        android:textSize="@dimen/_20ssp"
        android:gravity="center"
        android:text="@string/player_name"
        />
  <View
      android:id="@+id/separator"
      android:layout_width="@dimen/_0sdp"
      android:layout_height="@dimen/_0.1sdp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/txtRank"
      android:background="@android:color/darker_gray"
      />
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rvScore"
      android:layout_width="@dimen/_0sdp"
      android:layout_height="@dimen/_0sdp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toBottomOf="@id/separator"
      tools:listitem="@layout/layout_high_score_row_item"
      />
    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="rvScore,txtRank,txtPlayerName,txtScore,separator"
        android:visibility="visible"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtNoDataFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/no_data_found"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>